docker-httpd/yaml/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: docker-httpd
  namespace: test
  labels:
    app: docker-httpd
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: docker-httpd
  type: ClusterIP
