docker-httpd/yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: docker-httpd
  namespace: test
  labels:
    app: docker-httpd
spec:
  host: docker-httpd-test.apps.rosa.aws-sandbox.457c.p3.openshiftapps.com
  to:
    kind: Service
    name: docker-httpd
    weight: 100
  port:
    targetPort: http
